src/styles/component/atomic/input/_input.scss
$input-on-background: background-color(dark-sky-blue);
@mixin textFieldStyles {
  position: absolute;
  bottom: 0;
  width: 90%;
  max-width: 90%;
  height: 40px;
  background-color: transparent;
  padding: 0 35px 0 4px;
  padding-bottom: 14px;
  font-size: 16px;
  color: $color-gray-900;
  font-weight: 500;

  caret-color: $color-blue-500;

  border: 0;
  border-radius: 12px;
  box-shadow: none;
  border-color: transparent;
}
@mixin inputOnBackground {
  border: none;
  background-color: $input-on-background;
}

.text__field {
  display: flex;
  flex-direction: column;

  .input__wrapper.input__focus {
    border: 1px solid border-color(color-primary) !important;
  }

  .input__memo {
    display: flex;
    width: 100%;
    justify-content: space-between;

    margin-bottom: 20px;

    &__title {
      font-weight: 510;
      font-size: 15px;
      color: #76797e;
    }
  }

  .input__wrapper {
    position: relative;
    width: 100%;
    height: 56px;
    overflow: hidden;

    border-radius: 12px;
    border: 1px solid $color-gray-300;

    display: flex;
    justify-content: center;
    flex-direction: column;

    transition: height ease-in-out 0.15s;

    &.disable {
      background: $color-gray-100;
    }

    &.readonly {
      background: $color-gray-50;
    }

    &.onBackground {
      @include inputOnBackground();
    }

    input {
      @include textFieldStyles();

      &:focus {
        outline: none;
      }

      &:disabled {
        background-color: transparent;
      }

      @include customPlaceholder(transparent);

      &[type='password'] {
        font-size: 27px;
        letter-spacing: 3px;
        color: #2c3b4e;
        &::-webkit-input-placeholder {
          font-size: 16px;
          letter-spacing: 0;
        }
      }
    }

    textarea {
      resize: none;
      overflow: hidden;
      @include textFieldStyles();
      height: 105px;

      @include customPlaceholder($color-gray-400);

      &:focus {
        outline: none;
      }
      &:focus + .input__icon.textarea {
        align-items: baseline;
        top: 20px;
      }
    }

    &__label {
      position: absolute;
      left: 20px;
      font-weight: 400;
      font-size: 16px;
      color: $color-gray-500;
      &.disable {
        color: $color-gray-400;
      }

      &.input__focus,
      &.input__completed {
        font-size: 13px;
        top: 14px;
        &.input__calendar {
          display: none;
        }
      }
      &.input__focus {
        &.onBackground {
          color: #a0a2a7;
        }
      }
      &.onBackground {
        color: rgba(255, 255, 255, 0.4);
      }
    }
    &.input__focus,
    &.input__completed {
      justify-content: flex-start;
      &.input {
        height: 72px;
        &.input__calendar {
          height: 56px;
        }
      }
      &.textarea {
        height: 136px;
      }
      &.onBackground {
        background-color: background-color(color-white);
      }
      input {
        @include customPlaceholder($color-gray-400);
      }
    }
    &.input__completed {
      border: 1px solid $color-gray-300;
      &.onBackground {
        @include inputOnBackground();
        & > input {
          color: #fff;
        }
      }
    }

    &.input__error {
      border: 1px solid $color-error;
    }

    .input__icon,
    .input__remaining {
      position: absolute;
      height: 100%;
      right: 20px;

      display: flex;
      align-items: center;

      cursor: pointer;
      &.has-endAdornment {
        right: 100px;
      }
    }
    .input__remaining {
      color: $color-gray-550;
      font-style: normal;
      font-weight: 400;
      font-size: 15px;
      line-height: 100%;
      line-height: 20px;
    }
    .input__icon {
      position: absolute;
      right: 20px;
      display: flex;
      align-items: center;
      justify-content: center;
      top: 50%;
      transform: translateY(-50%);
      font-size: 18px;
    }

    .btn__sm {
      position: absolute;
      right: 20px;
      width: 67px;
      display: flex;
      align-items: center;
      justify-content: center;
      top: 50%;
      transform: translateY(-50%);
    }
  }

  .input__character__counter {
    font-weight: 400;
    font-size: 12px;
    line-height: 14px;
    color: text-color(santa-gray);
    text-align: end;

    margin: 6px 8px;

    &.disable {
      color: text-color(color-grey-blur);
    }
  }
  .input__subtitle {
    margin-top: 6px;
    padding-left: 20px;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    color: $color-gray-550;

    &.error {
      color: $color-error;
    }
  }
  .input__calendar__icon {
    &.disabled {
      color: $color-gray-400;
    }
  }
}

